[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"
description = "just an example"
repository = "https://github.com/MarcoIeni/rust-example"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
